중간저장,  이미지버튼 클릭시 이벤트 발생

--- a/K_league_info/app/src/main/AndroidManifest.xml
+++ b/K_league_info/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.k_league">
 
+    <uses-permisson android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".teamScreenActivity"></activity>
+        <activity android:name=".scoreScreenActivity"></activity>
+        <activity android:name=".teamdetailScreenActivity"></activity>
 
     </application>
 
