--- a/K_league_info/app/build.gradle
+++ b/K_league_info/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 
 }
 repositories {
