--- a/K_league_info/app/build.gradle
+++ b/K_league_info/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation "androidx.core:core-ktx:+"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
 repositories {
     mavenCentral()
